// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect > and by using the keyboard the user can select and remove an option 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r10»"
      id="radix-«rv»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <span
        class="badge badge-ghost text-xs relative [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-hidden max-h-5 px-1 rounded-xl flex items-center gap-1"
      >
        <span
          class="text-xs"
        >
          Svelte
        </span>
        <button
          aria-label="Remove Svelte option"
          aria-roledescription="button to remove option"
          type="button"
        >
          <span
            class="sr-only"
          >
            Remove Svelte option
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 hover:stroke-destructive"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </span>
      <input
        aria-activedescendant="radix-«r13»"
        aria-autocomplete="list"
        aria-controls="radix-«ru»"
        aria-expanded="true"
        aria-labelledby="radix-«rv»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r10»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-activedescendant="radix-«r13»"
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-«ru»"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="React"
            id="radix-«r11»"
            role="option"
          >
            React
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Vue"
            id="radix-«r12»"
            role="option"
          >
            Vue
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Svelte"
            id="radix-«r13»"
            role="option"
          >
            Svelte
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and by using the keyboard the user can select and remove an option 2`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r10»"
      id="radix-«rv»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <span
        class="badge badge-ghost text-xs relative [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-hidden max-h-5 px-1 rounded-xl flex items-center gap-1"
      >
        <span
          class="text-xs"
        >
          Svelte
        </span>
        <button
          aria-label="Remove Svelte option"
          aria-roledescription="button to remove option"
          type="button"
        >
          <span
            class="sr-only"
          >
            Remove Svelte option
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 hover:stroke-destructive"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </span>
      <input
        aria-activedescendant="radix-«r13»"
        aria-autocomplete="list"
        aria-controls="radix-«ru»"
        aria-expanded="true"
        aria-labelledby="radix-«rv»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r10»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-activedescendant="radix-«r13»"
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-«ru»"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="React"
            id="radix-«r11»"
            role="option"
          >
            React
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Vue"
            id="radix-«r12»"
            role="option"
          >
            Vue
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Svelte"
            id="radix-«r13»"
            role="option"
          >
            Svelte
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and the user can select and remove an option 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«rq»"
      id="radix-«rp»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <span
        class="badge badge-ghost text-xs relative [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-hidden max-h-5 px-1 rounded-xl flex items-center gap-1"
      >
        <span
          class="text-xs"
        >
          React
        </span>
        <button
          aria-label="Remove React option"
          aria-roledescription="button to remove option"
          type="button"
        >
          <span
            class="sr-only"
          >
            Remove React option
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 hover:stroke-destructive"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="radix-«ro»"
        aria-expanded="true"
        aria-labelledby="radix-«rp»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«rq»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-«ro»"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="React"
            id="radix-«rr»"
            role="option"
          >
            React
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Vue"
            id="radix-«rs»"
            role="option"
          >
            Vue
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Svelte"
            id="radix-«rt»"
            role="option"
          >
            Svelte
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and the user can select and remove an option 2`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«rq»"
      id="radix-«rp»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <span
        class="badge badge-ghost text-xs relative [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-hidden max-h-5 px-1 rounded-xl flex items-center gap-1"
      >
        <span
          class="text-xs"
        >
          React
        </span>
        <button
          aria-label="Remove React option"
          aria-roledescription="button to remove option"
          type="button"
        >
          <span
            class="sr-only"
          >
            Remove React option
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 hover:stroke-destructive"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="radix-«ro»"
        aria-expanded="true"
        aria-labelledby="radix-«rp»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«rq»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-«ro»"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="React"
            id="radix-«rr»"
            role="option"
          >
            React
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Vue"
            id="radix-«rs»"
            role="option"
          >
            Vue
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Svelte"
            id="radix-«rt»"
            role="option"
          >
            Svelte
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and the user clicks on the input > show the list of available options 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r8»"
      id="radix-«r7»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r6»"
        aria-expanded="true"
        aria-labelledby="radix-«r7»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r8»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-«r6»"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="React"
            id="radix-«r9»"
            role="option"
          >
            React
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Vue"
            id="radix-«ra»"
            role="option"
          >
            Vue
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Svelte"
            id="radix-«rb»"
            role="option"
          >
            Svelte
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and the user enters a text that does not match any options > show an empty list 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«rk»"
      id="radix-«rj»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«ri»"
        aria-expanded="true"
        aria-labelledby="radix-«rj»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«rk»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value="Brave"
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-«ri»"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            class="py-6 text-center text-sm"
            cmdk-empty=""
            role="presentation"
          >
            <span
              class="text-muted-foreground"
            >
              No results found
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and the user enters a text that matches an option > show the list of available options 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«re»"
      id="radix-«rd»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«rc»"
        aria-expanded="true"
        aria-labelledby="radix-«rd»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«re»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value="et"
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-«rc»"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="Svelte"
            id="radix-«rh»"
            role="option"
          >
            Svelte
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="React"
            id="radix-«rf»"
            role="option"
          >
            React
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and the user enters a text that matches an option > show the list of available options 2`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«re»"
      id="radix-«rd»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-activedescendant="radix-«rh»"
        aria-autocomplete="list"
        aria-controls="radix-«rc»"
        aria-expanded="true"
        aria-labelledby="radix-«rd»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«re»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-activedescendant="radix-«rh»"
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-«rc»"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="Vue"
            id="radix-«rg»"
            role="option"
          >
            Vue
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Svelte"
            id="radix-«rh»"
            role="option"
          >
            Svelte
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="React"
            id="radix-«rf»"
            role="option"
          >
            React
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and the user enters a text that matches an option > show the list of available options 3`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«re»"
      id="radix-«rd»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«rc»"
        aria-expanded="true"
        aria-labelledby="radix-«rd»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«re»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value="react"
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-«rc»"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="React"
            id="radix-«rf»"
            role="option"
          >
            React
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has accent variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r21»"
      id="radix-«r20»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      accent badge
    </label>
    <div
      class="shadow-2xs flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-accent shadow-accent [&:has(input:focus)]:outline-accent [&:has(input:focus-within)]:outline-accent min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r1v»"
        aria-expanded="true"
        aria-labelledby="radix-«r20»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r21»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has default variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r1o»"
      id="radix-«r1n»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      default badge
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 [&:has(input:focus)]:border-[currentColor] [&:has(input:focus-within)]:border-[currentColor] [&:has(input:focus)]:outline-ghost [&:has(input:focus-within)]:outline-ghost min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r1m»"
        aria-expanded="true"
        aria-labelledby="radix-«r1n»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r1o»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has error variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r2d»"
      id="radix-«r2c»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      error badge
    </label>
    <div
      class="shadow-2xs flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-error shadow-error [&:has(input:focus)]:outline-error [&:has(input:focus-within)]:outline-error min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r2b»"
        aria-expanded="true"
        aria-labelledby="radix-«r2c»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r2d»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has info variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r24»"
      id="radix-«r23»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      info badge
    </label>
    <div
      class="shadow-2xs flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-info shadow-info [&:has(input:focus)]:outline-info [&:has(input:focus-within)]:outline-info min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r22»"
        aria-expanded="true"
        aria-labelledby="radix-«r23»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r24»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has large (lg) size 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r1l»"
      id="radix-«r1k»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      MultiSelect large
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 text-lg px-3 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r1j»"
        aria-expanded="true"
        aria-labelledby="radix-«r1k»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r1l»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1 p-3"
        cmdk-list=""
        id="radix-«r1j»"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            class="py-6 text-center text-sm"
            cmdk-empty=""
            role="presentation"
          >
            <span
              class="text-muted-foreground"
            >
              No results found
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has medium (md) size 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r1i»"
      id="radix-«r1h»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      MultiSelect medium
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 text-sm px-2 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r1g»"
        aria-expanded="true"
        aria-labelledby="radix-«r1h»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r1i»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1 p-2"
        cmdk-list=""
        id="radix-«r1g»"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            class="py-6 text-center text-sm"
            cmdk-empty=""
            role="presentation"
          >
            <span
              class="text-muted-foreground"
            >
              No results found
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has no outline 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r19»"
      id="radix-«r18»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      MultiSelect has no outline
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r17»"
        aria-expanded="true"
        aria-labelledby="radix-«r18»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r19»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has outline 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r16»"
      id="radix-«r15»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      MultiSelect has outline
    </label>
    <div
      class="shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border min-h-fit text-sm border-base-content/20 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r14»"
        aria-expanded="true"
        aria-labelledby="radix-«r15»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r16»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has primary variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r1r»"
      id="radix-«r1q»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      primary badge
    </label>
    <div
      class="shadow-2xs flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-primary shadow-primary [&:has(input:focus)]:outline-primary [&:has(input:focus-within)]:outline-primary min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r1p»"
        aria-expanded="true"
        aria-labelledby="radix-«r1q»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r1r»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has secondary variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r1u»"
      id="radix-«r1t»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      secondary badge
    </label>
    <div
      class="shadow-2xs flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-secondary shadow-secondary [&:has(input:focus)]:outline-secondary [&:has(input:focus-within)]:outline-secondary min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r1s»"
        aria-expanded="true"
        aria-labelledby="radix-«r1t»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r1u»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has small (sm) size 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r1f»"
      id="radix-«r1e»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      MultiSelect small
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 text-sm px-2 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r1d»"
        aria-expanded="true"
        aria-labelledby="radix-«r1e»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r1f»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1 p-1.5"
        cmdk-list=""
        id="radix-«r1d»"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            class="py-6 text-center text-sm"
            cmdk-empty=""
            role="presentation"
          >
            <span
              class="text-muted-foreground"
            >
              No results found
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has success variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r27»"
      id="radix-«r26»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      success badge
    </label>
    <div
      class="shadow-2xs flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-success shadow-success [&:has(input:focus)]:outline-success [&:has(input:focus-within)]:outline-success min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r25»"
        aria-expanded="true"
        aria-labelledby="radix-«r26»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r27»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has tiny (xs) size 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r1c»"
      id="radix-«r1b»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      MultiSelect tiny
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 text-xs px-2 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r1a»"
        aria-expanded="true"
        aria-labelledby="radix-«r1b»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r1c»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1 p-1"
        cmdk-list=""
        id="radix-«r1a»"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            class="py-6 text-center text-sm"
            cmdk-empty=""
            role="presentation"
          >
            <span
              class="text-muted-foreground"
            >
              No results found
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has warning variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r2a»"
      id="radix-«r29»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      warning badge
    </label>
    <div
      class="shadow-2xs flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-warning shadow-warning [&:has(input:focus)]:outline-warning [&:has(input:focus-within)]:outline-warning min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r28»"
        aria-expanded="true"
        aria-labelledby="radix-«r29»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r2a»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > renders a multi select input 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r5»"
      id="radix-«r4»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r3»"
        aria-expanded="true"
        aria-labelledby="radix-«r4»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r5»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > renders no options 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r2»"
      id="radix-«r1»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-«r0»"
        aria-expanded="true"
        aria-labelledby="radix-«r1»"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-«r2»"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-«r0»"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            class="py-6 text-center text-sm"
            cmdk-empty=""
            role="presentation"
          >
            <span
              class="text-muted-foreground"
            >
              No results found
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
